# AI-News-LinkedIn-Agent

./: PROJECT_DOCUMENTATION.md  README.md  index.html  pyproject.toml  requirements.txt
src/: __init__.py  ai_agent.py  config.py  linkedin_poster.py  news_fetcher.py
tests/: __init__.py  test_suite.py
